# wisort

./: CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml
src/: main.py
src/characters/: __init__.py
src/files/: __init__.py  move.py  sort.py
src/wisort/: cli.py
src/wisort/characters/: __init__.py
src/wisort/config/: __init__.py
src/wisort/files/: __init__.py  conflicts.py  dedupe.py  move.py  sort.py  utils.py
src/wisort/runes/: __init__.py
